--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <footer>
     <div class="container">
       <p>
-        Created by Lokesh Dhakar<br />
-        <a href="https://twitter.com/lokesh" class="button button-minor">Follow me on Twitter</a>
+        Created by UofTADA<br />
+        <a href="http://uoftada.com/" class="button button-minor">Follow us</a>
       </p>
     </div>
   </footer>
