fix scale, add design patterns

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Color Thief</title>
+	<title>Your ADA LOGO</title>
 
   <meta name="description" content="Get the dominant color or color palette from an image.">
   <meta name="author" content="Lokesh Dhakar">
@@ -24,13 +24,33 @@
       </div>
       <div id="dragged-images" class="dragged-images"></div>
       <h2>Result</h2>
-      <canvas id="myCanvas" width="512" height="512"  style="border:1px solid #000000; display:inline-block;"></canvas><br>
+      <canvas id="myCanvas" width="256" height="256"  style="border:1px solid #000000; display:inline-block;"></canvas><br>
+      <h2>Customize your logo</h2>
+  
+      <select id="aa" name="aa" class="button">
+        <option value ="">Please Select One</option>
+        <option value ="machineLearned">Machine learnt best colour</option>
+        <option value ="blue">Blue</option>
+        <option value ="coffee">Coffee</option>
+        <option value ="cyanStone">cyanStone</option>
+        <option value ="greyWhite">greyWhite</option>
+        <option value ="Anonymous">Anonymous</option>
+        <option value="hehe">hehe</option>
+        <option value="izumi">izumi</option>
+        <option value="joy">joy</option>
+        <option value="lightpurple">lightpurple</option>
+        <option value="sakura">sakura</option>
+        <option value="tea">tea</option>
+        <option value="winnie">winnie</option>
+      </select>
+
     </div>
   </section>
       
   <footer>
     <div class="container">
       <p>
+              Note: We do not support FireFox<br />
         Created by UofTADA<br />
         <a href="http://uoftada.com/" class="button button-minor">Follow us</a>
       </p>
